2008-03-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/math.h (float_t, double_t): Define.

2008-02-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/gdtoa/gdtoaimp.h (USE_LOCALE): Define.
	* mingwex/gdtoa/mingw_snprintf.c: [USE_LOCALE] Include locale.h.
	(x_sprintf): [USE_LOCALE] Use  *localeconv()->decimal_point.

2008-02-28  Joseph Myers  <joseph@codesourcery.com>

	* include/complex.h: Don't condition contents on C99 or not
	__STRICT_ANSI__.

2008-02-01  Brian Dessent  <brian@dessent.net>

	* Makefile.in: Add rules to generate multiple versions of libmoldname.a for
	the different runtime versions.

2008-01-19 Danny Smith <dannysmithusers.sourceforge.net

	* inclue/wchar.h (fwide): Add prototype and guard inline definition.
	(mbsinit): Likewise.

2007-12-27 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/_mingw.h: Increment version to 3.14.

2007-11-26  Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* Makefile.in: Add libmsvcr90.a and libmsvcr90d.a targets.
	* msvcrt.def.in: Add support for __msvcr90__ and __msvcr90d__ defines.
	* mingwex/math/log10f.S: Correct issue with comments.
	* mingwex/math/log10l.S: Ditto.
	* mingwex/math/log1p.S: Ditto.
	* mingwex/math/log1pf.S: Ditto.
	* mingwex/math/log1pl.S: Ditto.
	* mingwex/math/log2.S: Ditto.
	* mingwex/math/log2f.S: Ditto.
	* mingwex/math/log2l.S: Ditto.
	* mingwex/math/logf.S: Ditto.
	* mingwex/math/logl.S: Ditto.

2007-10-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/gdtoa/mingw_snprintf.c: fixed warning during compile.

2007-10-03  Bernd Becker <hugin@users.sourceforge.net>

	* include/io.h (__finddata64_t, __wfinddata64_t): changed member 'size'
	from '_fsize_t' to '__int64' to be consistent with the other ...64
	structures and the value set there is 8 bytes not 4.  Add guard for both
	as the are only used by functions available from 6.1 on.

	* include/malloc.h (_HEAP_MAXREQ): Define.
	(_aligned_offset_recalloc): Define.