@@ -1,26 +1,9 @@
-/*	This source code was extracted from the Q8 package created and placed
-    in the PUBLIC DOMAIN by Doug Gwyn <gwyn@arl.mil>
-    last edit:	1999/11/05	gwyn@arl.mil
-
-    Implements subclause 7.24 of ISO/IEC 9899:1999 (E).
-
-	This is a minimal implementation for environments where
-	internationalization is not considered important.
-
-	It supports an encoding where all char codes are mapped
-	to the *same* code values within a wchar_t or wint_t,
-	so long as no other wchar_t codes are used by the program.
-
-*/
-
 #include	<wchar.h>
 #include	<stdio.h>
 
 int
-fwide(stream, mode)
-	FILE	*stream;
-	int		mode;
-	{
-	return -1;			/* limited to byte orientation */
-	}
+fwide(FILE* stream, int mode)
+{
+  return mode; /* Nothing to do.  */
+}
 
